comment all section

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 
 <body>
+    <!-- Start Main Body Section  -->
     <div class="main__body">
         <div class="container">
+            <!-- Start Body Text  -->
             <div class="main__body__text">
                 <h2 class="text-light">Reliable, efficient delivery</h2>
                 <h2 class="text-bold">Powered by Technology</h2>
                 <p class="text-description">Our Artificial intelligence powered tools use millions of project data
                     points to ensure thet your project is successful</p>
             </div>
+            <!-- End Body Text  -->
 
+            <!-- Start Card Section  -->
             <div class="all__card">
                 <div class="card__left">
                     <div class="card">
@@ -66,8 +70,10 @@
                     </div>
                 </div>
             </div>
+            <!-- End Card Section  -->
         </div>
     </div>
+    <!-- End Main Body  -->
 </body>
 
 </html>
