--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
             <!-- Start Card Section  -->
             <div class="all__card">
+                <!-- Start Card Left  -->
                 <div class="card__left">
                     <div class="card">
                         <div class="card__information">
@@ -36,6 +37,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Card Left  -->
+
+                <!-- Start Card Middle  -->
                 <div class="card__middle">
                     <div class="card">
                         <div class="card__information">
@@ -50,18 +54,23 @@
                     <div class="card card__md__last">
                         <div class="card__information">
                             <h3 class="card__information__title">Karma</h3>
-                            <p class="card__information__description">Regularly evaluates our talent to ensure quality</p>
+                            <p class="card__information__description">Regularly evaluates our talent to ensure quality
+                            </p>
                         </div>
                         <div class="card__img">
                             <img src="images/icon-karma.svg" alt="">
                         </div>
                     </div>
                 </div>
+                <!-- End card Middle  -->
+
+                <!-- Start Card Right  -->
                 <div class="card__right">
                     <div class="card">
                         <div class="card__information">
                             <h3 class="card__information__title">Calculator</h3>
-                            <p class="card__information__description">Uses data from past projects to provide better delivary estimates
+                            <p class="card__information__description">Uses data from past projects to provide better
+                                delivary estimates
                             </p>
                         </div>
                         <div class="card__img">
@@ -69,6 +78,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Card Right  -->
             </div>
             <!-- End Card Section  -->
         </div>
